added top banner slider

--- a/index.html
+++ b/index.html
@@ -42,6 +42,71 @@
                 </div>
             </div>
         </nav>
+
+        <!-- top banner slider -->
+        <div id="carouselExampleControls" class="container carousel slide bg-info my-5 p-5" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                            <div>
+                                <h1>Mega TV with Big Screen</h1>
+                                <p>The best tv in the market with digital functionality and better performance for you
+                                    entertainment.</p>
+                                <a class="btn btn-primary" href="#">BUY NOW</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <img src="./images/banner-images/tv.png" class="img-fluid d-block w-100" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                            <div>
+                                <h1>Feature HeadPhone with Multimedia System</h1>
+                                <p>The best headphone in the market with digital functionality and better performance
+                                    for
+                                    you
+                                    entertainment.</p>
+                                <a class="btn btn-primary" href="#">BUY NOW</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <img src="./images/banner-images/headphone.png" class="img-fluid d-block w-100" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                            <div>
+                                <h1>Gaming Experience with X-BOX</h1>
+                                <p>The best gaming box in the market with digital functionality and better performance
+                                    for
+                                    you
+                                    entertainment.</p>
+                                <a class="btn btn-primary" href="#">BUY NOW</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 col-sm-12">
+                            <img src="./images/banner-images/xbox.png" class="img-fluid d-block w-100" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </header>
 
     <!-- bootstrap js link -->
