added categories section

--- a/index.html
+++ b/index.html
@@ -44,70 +44,106 @@
         </nav>
 
         <!-- top banner slider -->
-        <div id="carouselExampleControls" class="container carousel slide bg-info my-5 p-5" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-                            <div>
-                                <h1>Mega TV with Big Screen</h1>
-                                <p>The best tv in the market with digital functionality and better performance for you
-                                    entertainment.</p>
-                                <a class="btn btn-primary" href="#">BUY NOW</a>
+        <section class="container bg-info my-5 p-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                                <div>
+                                    <h1>Mega TV with Big Screen</h1>
+                                    <p>The best tv in the market with digital functionality and better performance for
+                                        you
+                                        entertainment.</p>
+                                    <h3>$500</h3>
+                                    <a class="btn btn-primary" href="#">BUY NOW</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                <img src="./images/banner-images/tv.png" class="img-fluid d-block w-100" alt="">
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12">
-                            <img src="./images/banner-images/tv.png" class="img-fluid d-block w-100" alt="">
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                                <div>
+                                    <h1>Feature HeadPhone with Multimedia System</h1>
+                                    <p>The best headphone in the market with digital functionality and better
+                                        performance
+                                        for
+                                        you
+                                        entertainment.</p>
+                                    <h3>$100</h3>
+                                    <a class="btn btn-primary" href="#">BUY NOW</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                <img src="./images/banner-images/headphone.png" class="img-fluid d-block w-100" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                                <div>
+                                    <h1>Gaming Experience with X-BOX</h1>
+                                    <p>The best gaming box in the market with digital functionality and better
+                                        performance
+                                        for
+                                        you
+                                        entertainment.</p>
+                                    <h3>$250</h3>
+                                    <a class="btn btn-primary" href="#">BUY NOW</a>
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                <img src="./images/banner-images/xbox.png" class="img-fluid d-block w-100" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-                            <div>
-                                <h1>Feature HeadPhone with Multimedia System</h1>
-                                <p>The best headphone in the market with digital functionality and better performance
-                                    for
-                                    you
-                                    entertainment.</p>
-                                <a class="btn btn-primary" href="#">BUY NOW</a>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12">
-                            <img src="./images/banner-images/headphone.png" class="img-fluid d-block w-100" alt="">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </header>
+
+    <main>
+        <!-- categories section -->
+        <section class="my-5">
+            <div class="container text-center">
+                <div class="row g-5">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border rounded-4 bg-warning d-flex justify-content-center align-items-center">
+                            <h1>Bag</h1>
+                            <img src="./images/categories/bag.png" alt="">
                         </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-                            <div>
-                                <h1>Gaming Experience with X-BOX</h1>
-                                <p>The best gaming box in the market with digital functionality and better performance
-                                    for
-                                    you
-                                    entertainment.</p>
-                                <a class="btn btn-primary" href="#">BUY NOW</a>
-                            </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border rounded-4 bg-success d-flex justify-content-center align-items-center">
+                            <h1>Watch</h1>
+                            <img src="./images/categories/watch.png" alt="">
                         </div>
-                        <div class="col-lg-6 col-md-6 col-sm-12">
-                            <img src="./images/banner-images/xbox.png" class="img-fluid d-block w-100" alt="">
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="p-3 border rounded-4 bg-danger d-flex justify-content-center align-items-center">
+                            <h1>Shoe</h1>
+                            <img src="./images/categories/shoes.png" alt="">
                         </div>
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </header>
+        </section>
+    </main>
 
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
