added shoes card section

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 
     <main>
         <!-- categories section -->
-        <section class="my-5">
-            <div class="container text-center">
+        <section class="container my-5">
+            <div class="text-center">
                 <div class="row g-5">
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="p-3 border rounded-4 bg-warning d-flex justify-content-center align-items-center">
@@ -138,6 +138,58 @@
                         <div class="p-3 border rounded-4 bg-danger d-flex justify-content-center align-items-center">
                             <h1>Shoe</h1>
                             <img src="./images/categories/shoes.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- shoes card section -->
+        <section class="container my-5">
+            <h1>Shoes</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-5">
+                <div class="col">
+                    <div class="card h-100 border border-0 shadow-lg">
+                        <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike-21011</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                                temporibus sapiente excepturi veniam, eligendi minima at! Sed quisquam blanditiis
+                                quidem.</p>
+                            <h3>$200</h3>
+                        </div>
+                        <div class="m-3">
+                            <a class="btn btn-primary" href="#">BUY NOW</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border border-0 shadow-lg">
+                        <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Adidas-421</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                                temporibus sapiente excepturi veniam, eligendi minima at! Sed quisquam blanditiis
+                                quidem.</p>
+                            <h3>$300</h3>
+                        </div>
+                        <div class="m-3">
+                            <a class="btn btn-primary" href="#">BUY NOW</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border border-0 shadow-lg">
+                        <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Puma-W40Q</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                                temporibus sapiente excepturi veniam, eligendi minima at! Sed quisquam blanditiis
+                                quidem.</p>
+                            <h3>$400</h3>
+                        </div>
+                        <div class="m-3">
+                            <a class="btn btn-primary" href="#">BUY NOW</a>
                         </div>
                     </div>
                 </div>
