added backpack section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <!-- shoes card section -->
         <section class="container my-5">
             <h1>Shoes</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-5">
+            <div class="row row-cols-1 row-cols-md-3 g-5 mt-1">
                 <div class="col">
                     <div class="card h-100 border border-0 shadow-lg">
                         <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -180,9 +180,61 @@
                 </div>
                 <div class="col">
                     <div class="card h-100 border border-0 shadow-lg">
-                        <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Puma-W40Q</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                                temporibus sapiente excepturi veniam, eligendi minima at! Sed quisquam blanditiis
+                                quidem.</p>
+                            <h3>$400</h3>
+                        </div>
+                        <div class="m-3">
+                            <a class="btn btn-primary" href="#">BUY NOW</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- backpack card section -->
+        <section class="container my-5">
+            <h1>Backpacks</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-5 mt-1">
+                <div class="col">
+                    <div class="card h-100 border border-0 shadow-lg">
+                        <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Wilson-TM211</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                                temporibus sapiente excepturi veniam, eligendi minima at! Sed quisquam blanditiis
+                                quidem.</p>
+                            <h3>$200</h3>
+                        </div>
+                        <div class="m-3">
+                            <a class="btn btn-primary" href="#">BUY NOW</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border border-0 shadow-lg">
+                        <img src="./images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">High Sun-421</h5>
+                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
+                                temporibus sapiente excepturi veniam, eligendi minima at! Sed quisquam blanditiis
+                                quidem.</p>
+                            <h3>$300</h3>
+                        </div>
+                        <div class="m-3">
+                            <a class="btn btn-primary" href="#">BUY NOW</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border border-0 shadow-lg">
+                        <img src="./images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">CAT-K40Q</h5>
                             <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est
                                 temporibus sapiente excepturi veniam, eligendi minima at! Sed quisquam blanditiis
                                 quidem.</p>
