--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- bootstrap css link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+    <!-- custom css -->
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -245,6 +248,22 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- subscribe section -->
+        <section
+            class="container my-5 bg-info rounded-4 d-flex justify-content-center align-items-center subscribe-container-height">
+            <div>
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates more and explore our items</p>
+                <form>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <button type="submit" class="btn btn-primary">SUBMIT</button>
+                </form>
             </div>
         </section>
     </main>
