--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <p>Get updates more and explore our items</p>
                 <form>
                     <div class="mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <label for="exampleInputEmail1" class="form-label">Email</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <button type="submit" class="btn btn-primary">SUBMIT</button>
@@ -267,6 +267,10 @@
             </div>
         </section>
     </main>
+
+    <footer class="text-center">
+        <p>&copy; 2022 - Developed by Ehsan</p>
+    </footer>
 
     <!-- bootstrap js link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
