--- a/index.html
+++ b/index.html
@@ -122,23 +122,26 @@
 
     <main>
         <!-- categories section -->
-        <section class="container my-5">
+        <section class="categories container my-5">
             <div class="text-center">
                 <div class="row g-5">
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border rounded-4 bg-warning d-flex justify-content-center align-items-center">
+                        <div
+                            class="py-3 px-5 border rounded-4 bg-warning d-flex justify-content-between align-items-center">
                             <h1>Bag</h1>
                             <img src="./images/categories/bag.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border rounded-4 bg-success d-flex justify-content-center align-items-center">
+                        <div
+                            class="py-3 px-5 border rounded-4 bg-success d-flex justify-content-between align-items-center">
                             <h1>Watch</h1>
                             <img src="./images/categories/watch.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div class="p-3 border rounded-4 bg-danger d-flex justify-content-center align-items-center">
+                        <div
+                            class="py-3 px-5 border rounded-4 bg-danger d-flex justify-content-between align-items-center">
                             <h1>Shoe</h1>
                             <img src="./images/categories/shoes.png" alt="">
                         </div>
