--- a/index.html
+++ b/index.html
@@ -128,21 +128,21 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div
                             class="py-3 px-5 border rounded-4 bg-warning d-flex justify-content-between align-items-center">
-                            <h1>Bag</h1>
+                            <h1 class="text-white">Bag</h1>
                             <img src="./images/categories/bag.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div
                             class="py-3 px-5 border rounded-4 bg-success d-flex justify-content-between align-items-center">
-                            <h1>Watch</h1>
+                            <h1 class="text-white">Watch</h1>
                             <img src="./images/categories/watch.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div
                             class="py-3 px-5 border rounded-4 bg-danger d-flex justify-content-between align-items-center">
-                            <h1>Shoe</h1>
+                            <h1 class="text-white">Shoe</h1>
                             <img src="./images/categories/shoes.png" alt="">
                         </div>
                     </div>
