--- a/index.html
+++ b/index.html
@@ -47,61 +47,60 @@
         </nav>
 
         <!-- top banner slider -->
-        <section class="container bg-info my-5 p-5">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <section class="container my-5">
+            <div id="carouselExampleControls" class="carousel slide bg-info rounded-5 p-5" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active">
+                    <div class="carousel-item active" data-bs-interval="3000">
                         <div class="row">
-                            <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                            <div class="col-lg-7 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
                                 <div>
-                                    <h1>Mega TV with Big Screen</h1>
-                                    <p>The best tv in the market with digital functionality and better performance for
-                                        you
-                                        entertainment.</p>
-                                    <h3>$500</h3>
-                                    <a class="btn btn-primary" href="#">BUY NOW</a>
+                                    <h1>Cool Dude Headphone</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, voluptatum
+                                        repellat
+                                        totam numquam enim explicabo culpa quam ipsum tempore iusto?</p>
+                                    <h1>$300</h1>
+                                    <a href="#" class="btn btn-warning">BUY NOW</a>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <img src="./images/banner-images/tv.png" class="img-fluid d-block w-100" alt="">
+                            <div class="col-lg-5 col-md-6 col-sm-12">
+                                <img class="img-fluid" src="./images/banner-images/headphone.png" class="d-block w-100"
+                                    alt="...">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item" data-bs-interval="3000">
                         <div class="row">
-                            <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                            <div class="col-lg-7 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
                                 <div>
-                                    <h1>Feature HeadPhone with Multimedia System</h1>
-                                    <p>The best headphone in the market with digital functionality and better
-                                        performance
-                                        for
-                                        you
-                                        entertainment.</p>
-                                    <h3>$100</h3>
-                                    <a class="btn btn-primary" href="#">BUY NOW</a>
+                                    <h1>Mega LCD TV</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, voluptatum
+                                        repellat
+                                        totam numquam enim explicabo culpa quam ipsum tempore iusto?</p>
+                                    <h1>$500</h1>
+                                    <a href="#" class="btn btn-warning">BUY NOW</a>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <img src="./images/banner-images/headphone.png" class="img-fluid d-block w-100" alt="">
+                            <div class="col-lg-5 col-md-6 col-sm-12">
+                                <img class="img-fluid" src="./images/banner-images/tv.png" class="d-block w-100"
+                                    alt="...">
                             </div>
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item" data-bs-interval="3000">
                         <div class="row">
-                            <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
+                            <div class="col-lg-7 col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
                                 <div>
-                                    <h1>Gaming Experience with X-BOX</h1>
-                                    <p>The best gaming box in the market with digital functionality and better
-                                        performance
-                                        for
-                                        you
-                                        entertainment.</p>
-                                    <h3>$250</h3>
-                                    <a class="btn btn-primary" href="#">BUY NOW</a>
+                                    <h1>FataFati Game Box</h1>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, voluptatum
+                                        repellat
+                                        totam numquam enim explicabo culpa quam ipsum tempore iusto?</p>
+                                    <h1>$400</h1>
+                                    <a href="#" class="btn btn-warning">BUY NOW</a>
                                 </div>
                             </div>
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-                                <img src="./images/banner-images/xbox.png" class="img-fluid d-block w-100" alt="">
+                            <div class="col-lg-5 col-md-6 col-sm-12">
+                                <img class="img-fluid" src="./images/banner-images/xbox.png" class="d-block w-100"
+                                    alt="...">
                             </div>
                         </div>
                     </div>
@@ -122,28 +121,31 @@
 
     <main>
         <!-- categories section -->
-        <section class="categories container my-5">
+        <section class=" categories container my-5">
             <div class="text-center">
                 <div class="row g-5">
-                    <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div
-                            class="py-3 px-5 border rounded-4 bg-warning d-flex justify-content-between align-items-center">
-                            <h1 class="text-white">Bag</h1>
-                            <img src="./images/categories/bag.png" alt="">
+                    <div class="col-4">
+                        <div class="p-3 border rounded-4 bg-warning">
+                            <div class="d-flex justify-content-center align-items-center">
+                                <h1 class="text-white">Bag</h1>
+                                <img class="img-fluid" src="./images/categories/bag.png" alt="">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div
-                            class="py-3 px-5 border rounded-4 bg-success d-flex justify-content-between align-items-center">
-                            <h1 class="text-white">Watch</h1>
-                            <img src="./images/categories/watch.png" alt="">
+                    <div class="col-4">
+                        <div class="p-3 border rounded-4 bg-success">
+                            <div class="d-flex justify-content-center align-items-center">
+                                <h1 class="text-white">Watch</h1>
+                                <img class="img-fluid" src="./images/categories/watch.png" alt="">
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
-                        <div
-                            class="py-3 px-5 border rounded-4 bg-danger d-flex justify-content-between align-items-center">
-                            <h1 class="text-white">Shoe</h1>
-                            <img src="./images/categories/shoes.png" alt="">
+                    <div class="col-4">
+                        <div class="p-3 border rounded-4 bg-danger">
+                            <div class="d-flex justify-content-center align-items-center">
+                                <h1 class="text-white">Shoe</h1>
+                                <img class="img-fluid" src="./images/categories/shoes.png" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -256,7 +258,7 @@
 
         <!-- subscribe section -->
         <section
-            class="container my-5 bg-info rounded-4 d-flex justify-content-center align-items-center subscribe-container-height"
+            class="container my-5 bg-info rounded-5 d-flex justify-content-center align-items-center subscribe-container-height"
             id="subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
