--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <section class=" categories container my-5">
             <div class="text-center">
                 <div class="row g-5">
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-6 col-12">
                         <div class="p-3 border rounded-4 bg-warning">
                             <div class="d-flex justify-content-center align-items-center">
                                 <h1 class="text-white">Bag</h1>
@@ -132,7 +132,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-6 col-12">
                         <div class="p-3 border rounded-4 bg-success">
                             <div class="d-flex justify-content-center align-items-center">
                                 <h1 class="text-white">Watch</h1>
@@ -140,7 +140,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-lg-4 col-md-6 col-12">
                         <div class="p-3 border rounded-4 bg-danger">
                             <div class="d-flex justify-content-center align-items-center">
                                 <h1 class="text-white">Shoe</h1>
@@ -155,7 +155,7 @@
         <!-- shoes card section -->
         <section class="container my-5" id="shoes">
             <h1>Shoes</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-5 mt-1">
+            <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-5 mt-1">
                 <div class="col">
                     <div class="card h-100 border border-0 shadow-lg">
                         <img src="./images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -207,7 +207,7 @@
         <!-- backpack card section -->
         <section class="container my-5" id="backpacks">
             <h1>Backpacks</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-5 mt-1">
+            <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-5 mt-1">
                 <div class="col">
                     <div class="card h-100 border border-0 shadow-lg">
                         <img src="./images/bags/bag-1.png" class="card-img-top" alt="...">
